--- a/index.html
+++ b/index.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    
-<title>Pari❤️❤️</title>
+  <meta charset="UTF-8">
+  <title>Developer Rahul - 3D carousel</title>
+  <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
-    
+<!-- partial:index.partial.html -->
+<div id="drag-container">
+  <div id="spin-container">
 
-<div class="bg_heart">
+
+
+
+    <img src="img/5A0996C5-8330-4384-B185-03E24778FADF.JPG" alt="">
+    <img src="img/E05860A6-2F6D-477F-9B7E-1CCDF3C5CF2A.JPG" alt="">
+    <img src="img/IMG_2341.JPG" alt="">
+    <img src="img/IMG_2523.JPG" alt="">
+    <img src="img/IMG_2525.JPG" alt="">
+    <img src="img/IMG_2524.JPG" alt="">
+    <img src="img/IMG_2526.JPG" alt="">
+    <img src="img/IMG_2527.JPG" alt="">
+
+    <!-- Text at center of ground -->
+    <p>I Love You Pari 👸🏻 from Saksham</p>
+  </div>
+  <div id="ground"></div>
 </div>
 
-<div class="container">
-<h2 id="text1"></h2>
-
-
-</div>
-<script src="script.js">
-</script>
+<div id="music-container"></div>
 
 
 
+<!-- github corner (https://github.com/tholman/github-corners) -->
+<style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+<!-- partial -->
+  <script  src="./script.js"></script>
 
 </body>
-</html>
+
