--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Developer Rahul - 3D carousel</title>
+  <title>SpecialOne</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -24,12 +24,15 @@
     <img src="img/IMG_2527.JPG" alt="">
 
     <!-- Text at center of ground -->
-    <p>I Love You Pari 👸🏻 from Saksham</p>
+    <p>I Love You Pari from Saksham</p>
   </div>
   <div id="ground"></div>
 </div>
 
 <div id="music-container"></div>
+<audio autoplay loop = infinite>
+  <source src="audio/WhatsApp Audio 2023-02-04 at 21.17.02.mp3" type="audio/mp3">
+</audio>
 
 
 
